--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "electron-icon-builder": "^2.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
   },
