--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "electron-icon-builder": "^2.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.45.1",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -43,7 +45,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars":"off"
+    }
   },
   "browserslist": [
     "> 1%",
